5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1708_3061.log
== TEST (2019-04-29 14:13:42) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

print()
if(q > 0)and a == upper()terrestre
	print("DRAGO")
-- ERROR:
File "XXXX", line 5
    if(q > 0)and a == upper()terrestre
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:52) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

v = 
if(q > 0)and a == upper()terrestre
	print("DRAGO")
-- ERROR:
File "XXXX", line 4
    v = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:58) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))


-- ERROR:
File "XXXX", line 4
    v = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:07) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == upper.()terrestre)
	print(q * 40//150)
-- ERROR:
File "XXXX", line 5
    if(a == upper.()terrestre)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:28) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == terrestre)
	print(q * 40//150)
-- ERROR:
File "XXXX", line 5
    if(a == terrestre)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:39) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == terrestre):
	print(q * 40//150)
-- ERROR:
File "XXXX", line 6
    print(q * 40//150)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:28) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == upper.()terrestre):
		print(q * 40//150)
-- ERROR:
File "XXXX", line 5
    if(a == upper.()terrestre):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:39) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == terrestre):
		print(q * 40//150)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(a == terrestre):
NameError: name 'terrestre' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:11) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == upper.()terrestre):
		print(q * 40//150)
-- ERROR:
File "XXXX", line 5
    if(a == upper.()terrestre):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:23) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == upper.() + terrestre):
		print(q * 40//150)
-- ERROR:
File "XXXX", line 5
    if(a == upper.() + terrestre):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:30) 
-- CODE:
a = input("Tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
q = int(input("quantidade de unidades: "))

if (q > 0):
	if(a == terrestre):
		print(q * 40//150)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(a == terrestre):
NameError: name 'terrestre' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
